k8s/https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ritual-explorer-https-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "ritual-explorer-ip"
    networking.gke.io/managed-certificates: "ding-fish-cert"
    kubernetes.io/ingress.allow-http: "true"
    # Enable WebSocket support
    cloud.google.com/backend-config: "ritual-explorer-backend-config"
spec:
  rules:
  - host: ding.fish
    http:
      paths:
      - path: /rpc-ws
        pathType: Prefix
        backend:
          service:
            name: caddy-ws-proxy-service
            port:
              number: 8546
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ritual-explorer-service
            port:
              number: 80
  - host: www.ding.fish
    http:
      paths:
      - path: /rpc-ws
        pathType: Prefix
        backend:
          service:
            name: caddy-ws-proxy-service
            port:
              number: 8546
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ritual-explorer-service
            port:
              number: 80
